terraform/AKSCR/k8s/win/3.service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-services: "${APP_NAME}-service"
spec:
  selector:
    app: ${APP_NAME}-deployment
  ports:
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
