terraform/AKSCR/k8s/win/4.ingress.yml
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#annotations

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: cert-manager-global
    external-dns.alpha.kubernetes.io/hostname: ${APP_NAME}.${DOMAIN}
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#backend-protocol
spec:
  tls:
    - hosts:
        - ${APP_NAME}.${DOMAIN}
      secretName: ${APP_NAME}-tls
  rules:
    - host: ${APP_NAME}.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}-service
                port:
                  number: 443
